--- a/architectureProject/public/navbar.css
+++ b/architectureProject/public/navbar.css
@@ -3,6 +3,12 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.navbar .userProp {
+  display: flex;
+  align-items: baseline;
+}
+
+
 .topnav {
   overflow: hidden;
   background-color: #333;
@@ -18,13 +24,16 @@ body {
   font-size: 17px;
 }
 
+.sign_inOut_btn {
+}
+
 .topnav a:hover {
   background-color: #ddd;
   color: black;
 }
 
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #04aa6d;
   color: white;
 }
 
@@ -32,12 +41,10 @@ body {
   display: none;
 }
 
-.topnav.username-signout {
-    float: right;
-}
-
 @media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {display: none;}
+  .topnav a:not(:first-child) {
+    display: none;
+  }
   .topnav a.icon {
     float: right;
     display: block;
@@ -45,7 +52,9 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
+  .topnav.responsive {
+    position: relative;
+  }
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
