--- a/architectureProject/public/navbar.css
+++ b/architectureProject/public/navbar.css
@@ -8,6 +8,12 @@ body {
   align-items: baseline;
 }
 
+.avatar {
+  border-radius: 50%;
+  margin: 0 10px;
+  width: 50px;
+  height: 50px;
+}
 
 .topnav {
   overflow: hidden;
