--- a/architectureProject/public/navbar.css
+++ b/architectureProject/public/navbar.css
@@ -5,7 +5,12 @@ body {
 
 .navbar .userProp {
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  justify-content: center;
+}
+
+#navSignOutBtn {
+  width: auto;
 }
 
 .avatar {
@@ -13,59 +18,10 @@ body {
   margin: 0 10px;
   width: 50px;
   height: 50px;
+  transition: .2s ease;
 }
 
-.topnav {
-  overflow: hidden;
-  background-color: #333;
-}
-
-.topnav a {
-  float: left;
-  display: block;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.topnav a:hover {
-  background-color: #ddd;
-  color: black;
-}
-
-.topnav a.active {
-  background-color: #04aa6d;
-  color: white;
-}
-
-.topnav .icon {
-  display: none;
-}
-
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
-}
-
-@media screen and (max-width: 600px) {
-  .topnav.responsive {
-    position: relative;
-  }
-  .topnav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
+.avatar:hover {
+  border: 3px solid #28a745;
+  border-radius: 20%;
 }
