--- a/architectureProject/public/index.css
+++ b/architectureProject/public/index.css
@@ -2,16 +2,6 @@ html {
   background-image: url(./assets/barberBackground.jpg);
 }
 
-.signout-btn {
-  background-color: #f44336;
-  width: 10%;
-}
-
-.signout-btn:hover {
-  background-color: #f44336;
-  opacity: 1;
-}
-
 button:disabled:hover {
   opacity: 0.5;
 }
@@ -20,46 +10,76 @@ button:disabled {
   opacity: 0.5;
 }
 
-#background-video1 {
-  height: 85vh;
-  width: 50vw;
-  /* object-fit: cover; */
+video {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
   position: fixed;
   left: 0;
   right: 0;
-  top: 50;
+  top: 0;
   bottom: 0;
   z-index: -1;
-}
-#background-video2 {
-  background-position: left;
-  height: 85vh;
-  width: 50vw;
-  /* object-fit: cover; */
-  position: fixed;
-  left: 50;
-  right: 0;
-  top: 50;
-  bottom: 0;
-  z-index: -1;
+  filter: brightness(50%);
 }
 
-td button {
-    width: 10%;
+.welcome_title h1 {
+  background-color: #fbeee0a2;
+  color: #422800;
+  padding: 5px;
 }
 
 #barberBtn {
-  /* color: aliceblue; */
-  top: 55%;
-  left: 17%;
-  position: absolute;
-  z-index: 2;
+  width: 10%;
+  top: 45%;
+  left: 45%;
+  position: fixed;
 }
 
 #customerBtn {
-  /* color: aliceblue; */
-  top: 55%;
-  left: 71%;
-  position: absolute;
-  z-index: 2;
+  width: 30%;
+  height: 12%;
+  top: 30%;
+  left: 35%;
+  position: fixed;
+  font-size: xx-large;
+}
+
+.customer_btn,
+.barber_btn {
+  background-color: #fbeee0;
+  border: 2px solid #422800;
+  border-radius: 30px;
+  box-shadow: #422800 4px 4px 0 0;
+  color: #422800;
+  cursor: pointer;
+  display: inline-block;
+  font-weight: 600;
+  font-size: 18px;
+  padding: 0 18px;
+  line-height: 50px;
+  text-align: center;
+  text-decoration: none;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.customer_btn,
+.barber_btn:hover {
+  background-color: #fff;
+}
+
+.customer_btn,
+.barber_btn:active {
+  box-shadow: #422800 2px 2px 0 0;
+  transform: translate(2px, 2px);
+}
+
+@media (min-width: 768px) {
+  .customer_btn,
+  .barber_btn {
+    min-width: 120px;
+    padding: 0 25px;
+  }
 }
