--- a/architectureProject/public/signup.css
+++ b/architectureProject/public/signup.css
@@ -70,7 +70,7 @@ button:hover {
   width: 100%; /* Full width */
   height: 100%; /* Full height */
   overflow: auto; /* Enable scroll if needed */
-  background-color: #474e5d;
+  background-color: #474e5dd2;
   padding-top: 50px;
 }
 
